--- a/style.css
+++ b/style.css
@@ -155,3 +155,7 @@ h1, h2, h3, h4, h5, h6 {
 iframe {
   pointer-events: none;
 }
+
+.reveal .slides section .fragment.fade-in-then-out:not(.current-fragment) {
+  display: none !important;
+}
